[package]
name = "osmio"
version = "0.13.0-dev"
authors = ["Amanda McCann <amanda@technomancy.org>"]
keywords = ["openstreetmap", "osm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/osmio/"
description = "Read and write OpenStreetMap data files"

[dependencies]
xml-rs = "0.8.0"
protobuf = { version = "~2.8.1", features = ["with-bytes"] }
byteorder = "1.3.2"
flate2 = "1.0.12"
chrono = "0.4.31"
separator = "0.4.1"
derive_builder = "0.12.0"
quick-xml = "0.31"
bzip2 = "0.4"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.30.0"
iter-progress = "0.8.0"
quick-protobuf = "0.8.1"


