[package]
name = "osmio"
version = "0.15.0-dev"
authors = ["Amanda McCann <amanda@technomancy.org>"]
keywords = ["openstreetmap", "osm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/osmio/"
description = "Read and write OpenStreetMap data files"
edition = "2021"

[dependencies]
xml-rs = "0.8.0"
protobuf = { version = "~2.8.1", features = ["with-bytes"] }
byteorder = "1.3.2"
flate2 = "1.0.12"
chrono = "0.4.31"
separator = "0.4.1"
derive_builder = "0.20"
quick-xml = "0.33"
bzip2 = "0.4"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.32"
iter-progress = "0.8.0"
smallvec = "1.13.2"
smol_str = "0.3.1"


